feat: initial commit - edututor frontend monorepo
